# myosdev

./: .gitignore  CMakeLists.txt  compile_commands.json  vars.cmake
docs/: memory.md
scripts/: build_iso.sh  cmake_develop.sh  copy_clangd.sh
src/: boot.asm  kentry.c
src/cpu/gdt/: gdt.asm  gdt.c  gdt.h
src/cpu/interrupts/: idt.c  idt.h  isr.asm
src/sys/: abort.c  def.h  defin.h  intr.c  intr.h  mem.c  mem.h  term.c  term.h  types.h
test/: CMakeLists.txt
test/memory_tests/: CMakeLists.txt  kentry_mallocA.c
